# aula009

./: README.md  main.py  meulog  meus_logs  pyproject.toml
