[tool.poetry]
name = "aula009"
version = "0.1.0"
description = ""
authors = ["alexssandrodamiao <alexssandro.damiao@acertpix.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
